--- a/site/src/layouts/Layout.astro
+++ b/site/src/layouts/Layout.astro
@@ -26,7 +26,7 @@ const { title, description, class: className } = Astro.props
           <span class="text-2xl font-bold">Asius</span>
         </a>
         <div class="flex gap-6 text-sm text-gray-400">
-          <a href="/guides" class="hover:text-white transition">Guides</a>
+          <a href="/docs" class="hover:text-white transition">Docs</a>
           <a href="/status" class="hover:text-white transition">Status</a>
           <a href="https://github.com/asiusai" class="hover:text-white transition">GitHub</a>
         </div>
@@ -44,7 +44,7 @@ const { title, description, class: className } = Astro.props
           <span>Asius AI</span>
         </div>
         <div class="flex gap-6">
-          <a href="/guides" class="hover:text-white transition">Guides</a>
+          <a href="/docs" class="hover:text-white transition">Docs</a>
           <a href="/status" class="hover:text-white transition">Status</a>
           <a href="https://github.com/asiusai" class="hover:text-white transition">GitHub</a>
         </div>
