--- a/site/src/pages/index.astro
+++ b/site/src/pages/index.astro
@@ -120,10 +120,10 @@ import Layout from '../layouts/Layout.astro'
 				</div>
 
 				<div class="flex flex-col sm:flex-row gap-3">
-					<a href="/guides/install-openpilot" class="px-6 py-3 bg-white text-black font-semibold rounded-xl hover:bg-gray-100 transition-all text-center hover:scale-105">
+					<a href="/docs/install-openpilot" class="px-6 py-3 bg-white text-black font-semibold rounded-xl hover:bg-gray-100 transition-all text-center hover:scale-105">
 						Install Openpilot Fork
 					</a>
-					<a href="/guides/install-sunnypilot" class="px-6 py-3 border border-gray-600 rounded-xl hover:border-gray-400 hover:bg-white/5 transition-all text-center">
+					<a href="/docs/install-sunnypilot" class="px-6 py-3 border border-gray-600 rounded-xl hover:border-gray-400 hover:bg-white/5 transition-all text-center">
 						Install Sunnypilot Fork
 					</a>
 				</div>
